Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32375

qmake fails to build VS project files for an app .pro included in a subdirs .pro

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0 Beta1
    • 5.1.0
    • Build tools: qmake
    • None
    • Windows 7 x64, Visual Studio 2012 x64 cmd prompt with Windows XP targeting, QT 5.1.0 static with OpenGL, Python 2.7.5, Ruby 1.9.1.
    • 58de01b54bf34c5ee416c1d6fe5e5d1c5bc89e5f

    Description

      When a .pro file with TEMPLATE = app is included in a .pro file with TEMPLATE = subdirs I cannot create project files for VS 2012.

      qmake -tp vc -r fails when importing static plugins with an error that it cannot create s folder with the name of the app .pro file.

      >> ..... qt-5.1.0/qtbase/mkspecs/features/qt.prf:100: Cannot create directory >> ..... test\test1\test1.pro.
      >> Project ERROR: Aborting.

      If I use the app .pro individually without the subdirs project it works.

      I have attached test projects that simulate the effect and attached the debug output of qmake -tp vc -r -d.

      Attachments

        1. qmake_problem.txt
          1.62 MB
        2. QTBUG-32375_badvcprojoutdir.patch
          1.0 kB
        3. test.zip
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            nikolai.tasev Nikolai Tasev
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes